# Dj_bank

./: .gitignore  .gitmessage.txt  README.md  pyproject.toml
.github/workflows/: checks.yml
accounts/: models.py
accounts/migrations/: 0001_initial.py  0002_initial.py
config/settings/: base.py  dev.py  prod.py
config/urls/: urls_prod.py
users/: models.py  serializers.py  views.py
users/migrations/: 0001_initial.py
